# Django-Course

./: README.md  docker-compose.yml
customer360/: manage.py
customer360/customer360/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
customer360/customer360/forms/: customer_form.py
customer360/customer360/migrations/: 0001_initial.py  0002_interaction.py  0003_customer_social_media_alter_interaction_channel.py
customer360/customer360/templates/: add.html  base.html  index.html  interact.html  (+1 more)
lab1/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  requirements.txt  settings.py  test.py  urls.py
lab1/orm/: models.py  urls.py  views.py
lab1/tests/: test_models.py
lab1/utility/: config.py  settings.yaml
lab1_template/: Dockerfile  config.py  requirements.txt  settings.py  settings.yaml
lab2/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  read_courses.py  requirements.txt  settings.py  urls.py  write.py
lab2/crud/: admin.py  models.py
lab3/: README.md  pyproject.toml
lab4/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
lab4/adminsite/: admin.py  models.py
lab4/myproject/: settings.py
lab4/myproject/utility/: config.py
lab5/: requirements.txt
lab5/myproject/: asgi.py  settings.py  urls.py
lab5/onlinecourse/: models.py  urls.py  views.py
lab6/: requirements.txt
lab6/myproject/: settings.py  urls.py
lab6/onlinecourse/: urls.py  views.py
lab7/: requirements.txt
lab7/onlinecourse/: urls.py  views.py
lab8/: requirements.txt
lab8/onlinecourse/: models.py  urls.py  views.py
(+26 files in other folders)
