[tool.poetry]
name = "lab4"
version = "0.0.0"
description = "The lab for getting familiar with Admin Site Built-In Django Feature for manage application's data and content"
authors = ["Kostek <ksytnik73kwer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django
Pillow==10.0.0
jinja2==3.0
gunicorn==20.1.0
contextvars
typing-extensions==4.2.0
aiohttp==3.8.3
click==8.0.4
wheel==0.41.1
multidict==4.5
psycopg2-binary==2.9.7
dynaconf


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
