[tool.poetry]
name = "lab4"
version = "0.0.0"
description = "The lab for getting familiar with Admin Site Built-In Django Feature for manage application's data and content"
authors = ["Kostek <ksytnik73kwer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.6"
Pillow = "10.0.0"
jinja2 = "3.0"
gunicorn = "20.1.0"
typing-extensions = "4.2.0"
aiohttp = "3.8.3"
click = "8.0.4"
wheel = "0.41.1"
multidict = "4.5"
psycopg2-binary = "2.9.7"
dynaconf = "3.2.5"
dj_database_url = "2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
